objects/Child_Object__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Object</label>
        <referenceTo>Parent_Object__c</referenceTo>
        <relationshipLabel>Child Objects</relationshipLabel>
        <relationshipName>Child_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>test_Field123__c</fullName>
        <label>test Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_Field_2__c</fullName>
        <label>test Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_Field__c</fullName>
        <label>test Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Child Object</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>External_Id__c</columns>
        <columns>Phone__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Parent_Object__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Ch-{0000}</displayFormat>
        <label>Child Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Child Objects</pluralLabel>
    <recordTypes>
        <fullName>Record_Type1</fullName>
        <active>true</active>
        <label>Record Type1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_Type2</fullName>
        <active>true</active>
        <label>Record Type2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>